--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
+    "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "util": "^0.12.4"
   }
